syntax = "proto3";

option csharp_namespace = "TMS.ApiGateway.Grpc.Clients";

package auth.token;

// Сервис для валидации токенов аутентификации
service Auth {
  // Метод для валидации токена
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenReply);
}

// Сообщение, представляющее одну claim в токене
message Claim {
    string type = 1;
    string value = 2;
}

// Запрос на валидацию токена
message ValidateTokenRequest {
    string token = 1;
}

// Ответ с результатом валидации токена
message ValidateTokenReply {
    bool isValidate = 1;
    string authenticationType = 2;
    repeated Claim claims = 3;
}